fix: recruiters by company controller and repository.